3 April 2007: Wouter
	- detect sign of msghdr.msg_iovlen so that the cast to that type
	  in netevent (which is there to please lint) can be correct.
	  The type on several OSes ranges from int, int32, uint32, size_t.
	  Detects unsigned or signed using math trick.

2 April 2007: Wouter
	- check sizes of udp received messages, not too short.
	- review changes. Some memmoves can be memcpys: 4byte aligned.
	  set id correctly on cached answers. 
	- review changes msgreply.c, memleak on error condition. AA flag
	  clear on cached reply. Lowercase queries on hashing.
	  unit test on lowercasing. Test AA bit not set on cached reply.
	  Note that no TTLs are managed.

29 March 2007: Wouter
	- writev or sendmsg used when answering from cache.
	  This avoids a copy of the data.
	- do not do useless byteswap on query id. Store reply flags in uint16
	  for easier access (and no repeated byteswapping).
	- reviewed code.
	- configure detects and config.h includes sys/uio.h for writev decl.

28 March 2007: Wouter
	- new config option: num-queries-per-thread.
	- added tpkg test for answering three queries at the same time
	  using one thread (from the query service list).

27 March 2007: Wouter
	- added test for cache and not cached answers, in testbound replays.
	- testbound can give config file and commandline options from the
	  replay file to unbound.
	- created test that checks if items drop out of the cache.
	- added word 'partitioned hash table' to documentation on slab hash.
	  A slab hash is a partitioned hash table.
	- worker can handle multiple queries at a time.

26 March 2007: Wouter
	- config settings for slab hash message cache.
	- test for cached answer.
	- Fixup deleting fake answer from testbound list.

23 March 2007: Wouter
	- review of yesterday's commits.
	- covered up memory leak of the entry locks.
	- answers from the cache correctly. Copies flags correctly.
	- sanity check for incoming query replies.