@@ -3,6 +3,7 @@
 	  in netevent (which is there to please lint) can be correct.
 	  The type on several OSes ranges from int, int32, uint32, size_t.
 	  Detects unsigned or signed using math trick.
+	- constants for DNS flags. 
 
 2 April 2007: Wouter
 	- check sizes of udp received messages, not too short.
